// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pds follow views blocks followers by actor takedown 1`] = `
{
  "cursor": "0000000000000::bafycid",
  "followers": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "viewer": {
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "bob.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "carol.test",
      "viewer": {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "viewer": {
      "muted": false,
    },
  },
}
`;

exports[`pds follow views blocks follows by actor takedown 1`] = `
{
  "cursor": "0000000000000::bafycid",
  "follows": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "viewer": {
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "carol.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "bob.test",
      "viewer": {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "viewer": {
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches followers 1`] = `
{
  "cursor": "0000000000000::bafycid",
  "followers": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "viewer": {
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "dan.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "bob.test",
      "viewer": {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(4)",
      "handle": "carol.test",
      "viewer": {
        "followedBy": "record(7)",
        "following": "record(6)",
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "viewer": {
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches followers 2`] = `
{
  "cursor": "0000000000000::bafycid",
  "followers": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "bob.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches followers 3`] = `
{
  "cursor": "0000000000000::bafycid",
  "followers": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "bob.test",
      "viewer": {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "carol.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches followers 4`] = `
{
  "cursor": "0000000000000::bafycid",
  "followers": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "dan.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches followers 5`] = `
{
  "cursor": "0000000000000::bafycid",
  "followers": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "dan.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches follows 1`] = `
{
  "cursor": "0000000000000::bafycid",
  "follows": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "viewer": {
        "followedBy": "record(1)",
        "following": "record(0)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "dan.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "carol.test",
      "viewer": {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(4)",
      "handle": "bob.test",
      "viewer": {
        "followedBy": "record(7)",
        "following": "record(6)",
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "alice.test",
    "viewer": {
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches follows 2`] = `
{
  "cursor": "0000000000000::bafycid",
  "follows": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "carol.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "bob.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches follows 3`] = `
{
  "cursor": "0000000000000::bafycid",
  "follows": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "carol.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches follows 4`] = `
{
  "cursor": "0000000000000::bafycid",
  "follows": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "eve.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "bob.test",
      "viewer": {
        "followedBy": "record(5)",
        "following": "record(4)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(3)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "dan.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;

exports[`pds follow views fetches follows 5`] = `
{
  "cursor": "0000000000000::bafycid",
  "follows": [
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(1)",
      "handle": "carol.test",
      "viewer": {
        "followedBy": "record(3)",
        "following": "record(2)",
        "muted": false,
      },
    },
    {
      "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
      "declaration": {
        "actorType": "app.bsky.system.actorUser",
        "cid": "cids(0)",
      },
      "did": "user(2)",
      "handle": "alice.test",
      "viewer": {
        "muted": false,
      },
    },
  ],
  "subject": {
    "avatar": "https://pds.public.url/image/KzkHFsMRQ6oAKCHCRKFA1H-rDdc7VOtvEVpUJ82TwyQ/rs:fill:1000:1000:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
    "declaration": {
      "actorType": "app.bsky.system.actorUser",
      "cid": "cids(0)",
    },
    "did": "user(0)",
    "handle": "eve.test",
    "viewer": {
      "followedBy": "record(1)",
      "following": "record(0)",
      "muted": false,
    },
  },
}
`;
